# portfolio_taxi_demand_predictor

./: .gitignore  README.md  pyproject.toml
notebooks/: 01.ipynb  01_fetch_and_validate_raw_data.ipynb  01_fetch_and_write_transformed_data.ipynb  01_get_data.ipynb  02.ipynb  02_transform_raw_data_into_ts.ipynb  03.ipynb  03_feature_eng_1.ipynb  config.cfg
