[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Gustavo Morales <gustavo85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
requests = "^2.31.0"
pyarrow = "^12.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
