[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Gustavo Morales <gustavo85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
requests = "^2.31.0"
pyarrow = "^12.0.1"
loguru = "^0.7.0"
watermark = "^2.4.3"
pydub = "^0.25.1"
tqdm = "^4.65.0"
plotly = "^5.15.0"
nbformat = "^5.9.0"
ipykernel = "^6.25.1"
seaborn = "^0.12.2"
bar-chart-race = "^0.1.0"
geopandas = "^0.13.2"
proplot = "^0.9.7"
scipy = "<1.21.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
